--- a/product/static/products/css/product.css
+++ b/product/static/products/css/product.css
@@ -53,6 +53,8 @@ a {
 }
 
 #pop .cross {
+  position: absolute;
+  right: 0;
   color: rgba(244, 157, 55, 0.97);
   background-color: transparent;
   font-size: 3vw;
