--- a/product/static/products/css/product.scss
+++ b/product/static/products/css/product.scss
@@ -57,6 +57,9 @@ a {
   }
 
   .cross {
+    position: absolute;
+    right: 0;
+
     color: rgba(244, 157, 55, 0.97);
     background-color: transparent;
     font-size: 3vw;
