--- a/product/templates/product/detail.html
+++ b/product/templates/product/detail.html
@@ -13,15 +13,15 @@
 <section id="product" class="container-lg mt-5">
   <div class="row">
     <div class="col-md-7">
-      <div class="container">
+      <div class="container-fluid m-1">
         <div class="row">
-          <div class="col-md-4 display-md-block display-flex" style="overflow-y: auto" id="select-img-container">
+          <div class="col-12 col-sm-4 d-sm-block d-flex order-1 order-sm-0" style="overflow-y: auto" id="select-img-container">
             {% for img in product.images.all %}
             <img src="{{img}}" style="cursor: pointer" class="img-fluid m-1" alt=""
               onclick="setActiveProductImg(event)" />
             {% endfor %}
           </div>
-          <div class="col-md-7 offset-1">
+          <div class="col-12 col-sm-7 offset-sm-1 order-0 order-sm-1 main_product_img">
             <img style="cursor: pointer" src="{{product.images.all.0}}" alt="product"
               class="img-fluid" id="active-product-img" />
           </div>
@@ -77,11 +77,11 @@
         Question and Answer
       </h5>
     </li>
-    <li class="nav-item">
+    {% comment %} <li class="nav-item">
       <h5 class="tab-parent" onclick="changeTab(event)" data-target="care" href="#">
         Care
       </h5>
-    </li>
+    </li> {% endcomment %}
   </ul>
   <div class="tab" id="qa" style="display: none">
     <div class="container-lg my-2">
@@ -123,7 +123,7 @@
                   <div class="card-footer d-flex justify-content-between">
                     <div class="d-flex align-items-center justify-content-center">
                       <div class="me-2">
-                        <img class="usr-img" src="/assets/img/shop/Author avatar.png" alt="" />
+                        <img class="usr-img" src="https://static.panaya.in/media/{{review.user.get_profile_pic}}" alt="" />
                       </div>
                       <p>
                         {{review.user}}<span class="fw-light">
@@ -236,7 +236,7 @@
   });
 </script>
 <script src="{% static 'products/js/product.js' %} "></script>
-<script src="{% static 'products/js/cart.js' %} "></script>
+<script src="{% static 'products/js/cart_popup.js' %} "></script>
 <script>
   window.addEventListener("DOMContentLoaded", (event) => {
     cart = new Cart();
