Added OrderTracking API for single order page

--- a/orders/templates/payment/order_details.html
+++ b/orders/templates/payment/order_details.html
@@ -73,7 +73,7 @@ Order Details
             </div>
             <div class="col-sm-auto">
                 <div>
-                    <p class="fw-bold">Delivery by Sun Jul 12</p>
+                    <p class="fw-bold">Delivery update in  days</p>
                 </div>
             </div>
         </div>
