--- a/orders/templates/payment/order_verify_details.html
+++ b/orders/templates/payment/order_verify_details.html
@@ -108,7 +108,7 @@ Payment Gateway
             </div>
             <div class="col-sm-4">
                 <div>
-                    <p class="fw-bold">Delivery by Sun Jul 12</p>
+                    <p class="fw-bold">Delivery update in 5 days</p>
                 </div>
             </div>
         </div>
