--- a/user_manager/templates/base_user.html
+++ b/user_manager/templates/base_user.html
@@ -7,15 +7,67 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Sign in{% endblock title %}</title>
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="{% static 'user_manager/css/styles.css' %}" rel="stylesheet">
     {% block css %}{% endblock css %}
+    <style>
+        #crown{
+            display:flex;
+            flex-direction: column;
+            justify-content:center;
+            align-items: center;
+            color: #fff;
+        }
+
+        #crown img{
+            width:40%;
+            height:25%;
+        }
+        @media only screen and (max-width: 800px){
+            #crown img{
+                width:20%;
+                height: 40%;
+            }
+        }
+        #crown h1{
+            margin:0;
+        }
+    </style>
 </head>
 <body>
-    <div class="container">
-        <img src="{% static 'user_manager/images/crown.png' %}">
-        <h1>PANAYA</h1>
+    <div class='row'>
+        <div class="col-md-6" id='crown'>
+            <img src="{% static 'user_manager/images/crown.png' %}">
+            <h1>PANAYA</h1>
+        </div>
+        <div class="col-md-6">
+            {% block body %}{% endblock body %}
+        </div>
     </div>
-    {% block body %}{% endblock body %}
+    
+    {% comment %} logout popup {% endcomment %}
+    <div class="modal fade" id="logoutModal" tabindex="-1" aria-labelledby="logoutModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="logoutModalLabel">Logout confirmation</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Do you sure want to logout?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <a href="{% url 'logout' %}">
+                    <button type="button" class="btn btn-danger">Log Out</button>
+                </a>
+            </div>
+            </div>
+        </div>
+    </div>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <script>
         {% block js %}{% endblock js %}
     </script>
