--- a/user_manager/templates/user_manager/profile_address.html
+++ b/user_manager/templates/user_manager/profile_address.html
@@ -60,8 +60,8 @@
                             <form method="post">
                                 {% csrf_token %}
                                 <input type="text" name='id' value="{{ address.id }}" hidden>
-                                <button class='edit-button btn btn-primary' formaction="{% url 'edit_address' %}">Edit</button>
-                                <button class='edit-button btn btn-primary' formaction="{% url 'delete_address' %}">Delete</button>
+                                <button style="margin :2%;" class='edit-button btn btn-primary' formaction="{% url 'edit_address' %}">Edit</button>
+                                <button style="margin :2%;" class='edit-button btn btn-primary' formaction="{% url 'delete_address' %}">Delete</button>
                             </form>
                         </div>
                     </div>   
