--- a/user_manager/templates/user_manager/profile_edit_address.html
+++ b/user_manager/templates/user_manager/profile_edit_address.html
@@ -37,6 +37,9 @@ Add Address
             <input type="text" class='entry' name="postalcode" id="postalcode" class="form-control" placeholder="Enter your Postal Code" value="{{ address.postal_code }}" required>
         </div>
         <div class="form-group">
+            <input type="text" class='entry' name="state" id="state" class="form-control" placeholder="Enter your State" value="{{ address.state }}" required>
+        </div>
+        <div class="form-group">
            
             <input type="text" class='entry' name="country" id="country" class="form-control" placeholder="Enter your Country" required>
         </div>
